cleaned the imported data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -679,51 +679,207 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Real Data Preview:\n",
-      "   Unnamed: 0 Unnamed: 1                                         Unnamed: 2  \\\n",
-      "0         NaN     Title:  A&E Attendances & Emergency Admission monthly ...   \n",
-      "1         NaN        NaN                                                NaN   \n",
-      "2         NaN   Summary:  A&E attendances, performance and emergency adm...   \n",
-      "3         NaN        NaN                                                NaN   \n",
-      "4         NaN    Period:                                      December 2024   \n",
+      "New Data Preview (with custom headers):\n",
+      "    Code                                             System  \\\n",
+      "NaN  NaN                                                NaN   \n",
+      "NaN  QOX  NHS Bath And North East Somerset, Swindon And ...   \n",
+      "NaN  QHG  NHS Bedfordshire, Luton And Milton Keynes Inte...   \n",
+      "NaN  QHL  NHS Birmingham And Solihull Integrated Care Board   \n",
+      "NaN  QUY  NHS Bristol, North Somerset And South Gloucest...   \n",
       "\n",
-      "  Unnamed: 3 Unnamed: 4 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8  \\\n",
-      "0        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-      "1        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-      "2        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-      "3        NaN        NaN        NaN        NaN        NaN        NaN   \n",
-      "4        NaN        NaN        NaN        NaN        NaN        NaN   \n",
+      "     Type 1 Departments  Type 2 Departments  Type 3 Departments  \\\n",
+      "NaN                 NaN                 NaN                 NaN   \n",
+      "NaN             19172.0               309.0             10548.0   \n",
+      "NaN             25892.0                 0.0             20875.0   \n",
+      "NaN             41427.0               318.0             18349.0   \n",
+      "NaN             24489.0              2126.0              8046.0   \n",
       "\n",
-      "  Unnamed: 9  ... Unnamed: 17 Unnamed: 18 Unnamed: 19 Unnamed: 20 Unnamed: 21  \\\n",
-      "0        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
-      "1        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
-      "2        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
-      "3        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
-      "4        NaN  ...         NaN         NaN         NaN         NaN         NaN   \n",
+      "     Total Attendances  Attendances < 4 hours (Type 1)  \\\n",
+      "NaN                NaN                             NaN   \n",
+      "NaN            30029.0                         10515.0   \n",
+      "NaN            46767.0                         13764.0   \n",
+      "NaN            60094.0                         23792.0   \n",
+      "NaN            34661.0                         14234.0   \n",
       "\n",
-      "  Unnamed: 22 Unnamed: 23 Unnamed: 24 Unnamed: 25 Unnamed: 26  \n",
-      "0         NaN         NaN         NaN         NaN         NaN  \n",
-      "1         NaN         NaN         NaN         NaN         NaN  \n",
-      "2         NaN         NaN         NaN         NaN         NaN  \n",
-      "3         NaN         NaN         NaN         NaN         NaN  \n",
-      "4         NaN         NaN         NaN         NaN         NaN  \n",
+      "     Attendances < 4 hours (Type 2)  Attendances < 4 hours (Type 3)  \\\n",
+      "NaN                             NaN                             NaN   \n",
+      "NaN                           309.0                         10094.0   \n",
+      "NaN                             0.0                         20337.0   \n",
+      "NaN                           318.0                         18322.0   \n",
+      "NaN                          2001.0                          7623.0   \n",
       "\n",
-      "[5 rows x 27 columns]\n"
+      "     Total Attendances < 4 hours  ...  Percentage in 4 hours (Type 2)  \\\n",
+      "NaN                          NaN  ...                             NaN   \n",
+      "NaN                      20918.0  ...                               1   \n",
+      "NaN                      34101.0  ...                               -   \n",
+      "NaN                      42432.0  ...                               1   \n",
+      "NaN                      23858.0  ...                        0.941204   \n",
+      "\n",
+      "     Percentage in 4 hours (Type 3)  Emergency Admissions Type 1  \\\n",
+      "NaN                             NaN                          NaN   \n",
+      "NaN                        0.956959                       6436.0   \n",
+      "NaN                        0.974228                       7142.0   \n",
+      "NaN                        0.998529                      11604.0   \n",
+      "NaN                        0.947427                       8266.0   \n",
+      "\n",
+      "     Emergency Admissions Type 2  Emergency Admissions Type 3 and 4  \\\n",
+      "NaN                          NaN                                NaN   \n",
+      "NaN                          0.0                                8.0   \n",
+      "NaN                          0.0                                0.0   \n",
+      "NaN                          0.0                                0.0   \n",
+      "NaN                          9.0                                0.0   \n",
+      "\n",
+      "     Total Emergency Admissions via A&E  \\\n",
+      "NaN                                 NaN   \n",
+      "NaN                              6444.0   \n",
+      "NaN                              7142.0   \n",
+      "NaN                             11604.0   \n",
+      "NaN                              8275.0   \n",
+      "\n",
+      "    Other Emergency Admissions (not via A&E)  Total Emergency Admissions  \\\n",
+      "NaN                                      NaN                         NaN   \n",
+      "NaN                                   4007.0                     10451.0   \n",
+      "NaN                                   2738.0                      9880.0   \n",
+      "NaN                                   6873.0                     18477.0   \n",
+      "NaN                                   3642.0                     11917.0   \n",
+      "\n",
+      "     Patients spending >4 hours from decision to admit  \\\n",
+      "NaN                                                NaN   \n",
+      "NaN                                             2193.0   \n",
+      "NaN                                             1079.0   \n",
+      "NaN                                             4879.0   \n",
+      "NaN                                             2937.0   \n",
+      "\n",
+      "     Patients spending >12 hours from decision to admit  \n",
+      "NaN                                                NaN   \n",
+      "NaN                                              445.0   \n",
+      "NaN                                               82.0   \n",
+      "NaN                                             1938.0   \n",
+      "NaN                                             1047.0   \n",
+      "\n",
+      "[5 rows x 26 columns]\n",
+      "\n",
+      "Cleaned Data Preview:\n",
+      "    Code                                        System  Type 1 Departments  \\\n",
+      "NaN  QOP  NHS Greater Manchester Integrated Care Board             87508.0   \n",
+      "\n",
+      "     Type 2 Departments  Type 3 Departments  Total Attendances  \\\n",
+      "NaN              3184.0             35077.0           125769.0   \n",
+      "\n",
+      "     Attendances < 4 hours (Type 1)  Attendances < 4 hours (Type 2)  \\\n",
+      "NaN                         44674.0                          3107.0   \n",
+      "\n",
+      "     Attendances < 4 hours (Type 3)  Total Attendances < 4 hours  ...  \\\n",
+      "NaN                         33238.0                      81019.0  ...   \n",
+      "\n",
+      "     Percentage in 4 hours (Type 3)  Emergency Admissions Type 1  \\\n",
+      "NaN                        0.947572                      21989.0   \n",
+      "\n",
+      "     Emergency Admissions Type 2  Emergency Admissions Type 3 and 4  \\\n",
+      "NaN                        148.0                              677.0   \n",
+      "\n",
+      "     Total Emergency Admissions via A&E  \\\n",
+      "NaN                             22814.0   \n",
+      "\n",
+      "     Other Emergency Admissions (not via A&E) Total Emergency Admissions  \\\n",
+      "NaN                                    5925.0                    28739.0   \n",
+      "\n",
+      "     Patients spending >4 hours from decision to admit  \\\n",
+      "NaN                                            12246.0   \n",
+      "\n",
+      "     Patients spending >12 hours from decision to admit  \\\n",
+      "NaN                                             4105.0    \n",
+      "\n",
+      "     Percentage_Under_4_Hours  \n",
+      "NaN                 64.418895  \n",
+      "\n",
+      "[1 rows x 27 columns]\n",
+      "\n",
+      "Final Columns:\n",
+      "Index(['Code', 'System', 'Type 1 Departments', 'Type 2 Departments',\n",
+      "       'Type 3 Departments', 'Total Attendances',\n",
+      "       'Attendances < 4 hours (Type 1)', 'Attendances < 4 hours (Type 2)',\n",
+      "       'Attendances < 4 hours (Type 3)', 'Total Attendances < 4 hours',\n",
+      "       'Attendances > 4 hours (Type 1)', 'Attendances > 4 hours (Type 2)',\n",
+      "       'Attendances > 4 hours (Type 3)', 'Total Attendances > 4 hours',\n",
+      "       'Percentage in 4 hours (all)', 'Percentage in 4 hours (Type 1)',\n",
+      "       'Percentage in 4 hours (Type 2)', 'Percentage in 4 hours (Type 3)',\n",
+      "       'Emergency Admissions Type 1', 'Emergency Admissions Type 2',\n",
+      "       'Emergency Admissions Type 3 and 4',\n",
+      "       'Total Emergency Admissions via A&E',\n",
+      "       'Other Emergency Admissions (not via A&E)',\n",
+      "       'Total Emergency Admissions',\n",
+      "       'Patients spending >4 hours from decision to admit',\n",
+      "       'Patients spending >12 hours from decision to admit',\n",
+      "       'Percentage_Under_4_Hours'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Total Rows After Cleaning: 42\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "# import hospital data\n",
+    "\n",
+    "# Load the Excel file and skip rows to get to the actual data\n",
     "real_file_path = '../data/december_2024_ae_data.xls'\n",
     "\n",
-    "# Read the Excel file\n",
-    "real_data = pd.read_excel(real_file_path, engine='xlrd')\n",
+    "# Define the correct headers\n",
+    "headers = [\n",
+    "    'Code', 'System', 'Type 1 Departments', 'Type 2 Departments', 'Type 3 Departments',\n",
+    "    'Total Attendances', 'Attendances < 4 hours (Type 1)', 'Attendances < 4 hours (Type 2)',\n",
+    "    'Attendances < 4 hours (Type 3)', 'Total Attendances < 4 hours', 'Attendances > 4 hours (Type 1)',\n",
+    "    'Attendances > 4 hours (Type 2)', 'Attendances > 4 hours (Type 3)', 'Total Attendances > 4 hours',\n",
+    "    'Percentage in 4 hours (all)', 'Percentage in 4 hours (Type 1)', 'Percentage in 4 hours (Type 2)',\n",
+    "    'Percentage in 4 hours (Type 3)', 'Emergency Admissions Type 1', 'Emergency Admissions Type 2',\n",
+    "    'Emergency Admissions Type 3 and 4', 'Total Emergency Admissions via A&E',\n",
+    "    'Other Emergency Admissions (not via A&E)', 'Total Emergency Admissions',\n",
+    "    'Patients spending >4 hours from decision to admit', 'Patients spending >12 hours from decision to admit'\n",
+    "]\n",
+    "\n",
+    "# Skip rows and use the custom headers\n",
+    "real_data = pd.read_excel(real_file_path, engine='xlrd', skiprows=17, header=None, names=headers)\n",
     "\n",
     "# Preview the data\n",
-    "print(\"\\nReal Data Preview:\")\n",
-    "print(real_data.head())\n"
+    "print(\"\\nNew Data Preview (with custom headers):\")\n",
+    "print(real_data.head())\n",
+    "\n",
+    "# Clean and filter the data\n",
+    "# Remove rows with invalid or placeholder values\n",
+    "real_data = real_data[real_data['System'].notna() & (real_data['System'] != '-')]\n",
+    "\n",
+    "# Convert relevant columns to numeric\n",
+    "numeric_columns = [\n",
+    "    'Total Attendances', 'Total Attendances < 4 hours', 'Total Attendances > 4 hours',\n",
+    "    'Emergency Admissions Type 1', 'Patients spending >4 hours from decision to admit'\n",
+    "]\n",
+    "real_data[numeric_columns] = real_data[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Drop rows with missing required data\n",
+    "real_data = real_data.dropna(subset=['Total Attendances', 'Total Attendances < 4 hours'])\n",
+    "\n",
+    "# Add calculated fields (e.g., percentage of patients seen within 4 hours)\n",
+    "real_data['Percentage_Under_4_Hours'] = (real_data['Total Attendances < 4 hours'] / real_data['Total Attendances']) * 100\n",
+    "\n",
+    "# Filter for a specific hospital system (example)\n",
+    "hospital_data = real_data[real_data['System'] == 'NHS Greater Manchester Integrated Care Board']\n",
+    "\n",
+    "# Preview the cleaned data\n",
+    "print(\"\\nCleaned Data Preview:\")\n",
+    "print(hospital_data.head())\n",
+    "\n",
+    "# Check final column names and row count\n",
+    "print(\"\\nFinal Columns:\")\n",
+    "print(real_data.columns)\n",
+    "print(f\"\\nTotal Rows After Cleaning: {len(real_data)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
