Integrated and cleaned 2024 A&E data for all months. Calculated percentage under 4 hours and added 'Date' column

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,152 +679,94 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "New Data Preview (with custom headers):\n",
-      "    Code                                             System  \\\n",
-      "NaN  NaN                                                NaN   \n",
-      "NaN  QOX  NHS Bath And North East Somerset, Swindon And ...   \n",
-      "NaN  QHG  NHS Bedfordshire, Luton And Milton Keynes Inte...   \n",
-      "NaN  QHL  NHS Birmingham And Solihull Integrated Care Board   \n",
-      "NaN  QUY  NHS Bristol, North Somerset And South Gloucest...   \n",
+      "Combined Data Preview:\n",
+      "  Code                                             System  Type 1 Departments  \\\n",
+      "0  QOX  NHS Bath And North East Somerset, Swindon And ...             17493.0   \n",
+      "1  QHG  NHS Bedfordshire, Luton And Milton Keynes Inte...             23953.0   \n",
+      "2  QHL  NHS Birmingham And Solihull Integrated Care Board             37306.0   \n",
+      "3  QUY  NHS Bristol, North Somerset And South Gloucest...             23459.0   \n",
+      "4  QU9  NHS Buckinghamshire, Oxfordshire And Berkshire...             34233.0   \n",
       "\n",
-      "     Type 1 Departments  Type 2 Departments  Type 3 Departments  \\\n",
-      "NaN                 NaN                 NaN                 NaN   \n",
-      "NaN             19172.0               309.0             10548.0   \n",
-      "NaN             25892.0                 0.0             20875.0   \n",
-      "NaN             41427.0               318.0             18349.0   \n",
-      "NaN             24489.0              2126.0              8046.0   \n",
+      "   Type 2 Departments  Type 3 Departments  Total Attendances  \\\n",
+      "0               355.0             10293.0            28141.0   \n",
+      "1                 0.0             16524.0            40477.0   \n",
+      "2                 0.0             16376.0            53682.0   \n",
+      "3              2252.0              7594.0            33305.0   \n",
+      "4              5268.0              8500.0            48001.0   \n",
       "\n",
-      "     Total Attendances  Attendances < 4 hours (Type 1)  \\\n",
-      "NaN                NaN                             NaN   \n",
-      "NaN            30029.0                         10515.0   \n",
-      "NaN            46767.0                         13764.0   \n",
-      "NaN            60094.0                         23792.0   \n",
-      "NaN            34661.0                         14234.0   \n",
+      "   Attendances < 4 hours (Type 1)  Attendances < 4 hours (Type 2)  \\\n",
+      "0                          9904.0                           355.0   \n",
+      "1                         14812.0                             0.0   \n",
+      "2                         21366.0                             0.0   \n",
+      "3                         14313.0                          2122.0   \n",
+      "4                         20331.0                          5240.0   \n",
       "\n",
-      "     Attendances < 4 hours (Type 2)  Attendances < 4 hours (Type 3)  \\\n",
-      "NaN                             NaN                             NaN   \n",
-      "NaN                           309.0                         10094.0   \n",
-      "NaN                             0.0                         20337.0   \n",
-      "NaN                           318.0                         18322.0   \n",
-      "NaN                          2001.0                          7623.0   \n",
+      "   Attendances < 4 hours (Type 3)  Total Attendances < 4 hours  ...  \\\n",
+      "0                          9733.0                      19992.0  ...   \n",
+      "1                         16328.0                      31140.0  ...   \n",
+      "2                         16351.0                      37717.0  ...   \n",
+      "3                          7162.0                      23597.0  ...   \n",
+      "4                          8043.0                      33614.0  ...   \n",
       "\n",
-      "     Total Attendances < 4 hours  ...  Percentage in 4 hours (Type 2)  \\\n",
-      "NaN                          NaN  ...                             NaN   \n",
-      "NaN                      20918.0  ...                               1   \n",
-      "NaN                      34101.0  ...                               -   \n",
-      "NaN                      42432.0  ...                               1   \n",
-      "NaN                      23858.0  ...                        0.941204   \n",
+      "   Emergency Admissions Type 1  Emergency Admissions Type 2  \\\n",
+      "0                       5984.0                          0.0   \n",
+      "1                       6646.0                          0.0   \n",
+      "2                      11635.0                          0.0   \n",
+      "3                       7635.0                         13.0   \n",
+      "4                      10316.0                        990.0   \n",
       "\n",
-      "     Percentage in 4 hours (Type 3)  Emergency Admissions Type 1  \\\n",
-      "NaN                             NaN                          NaN   \n",
-      "NaN                        0.956959                       6436.0   \n",
-      "NaN                        0.974228                       7142.0   \n",
-      "NaN                        0.998529                      11604.0   \n",
-      "NaN                        0.947427                       8266.0   \n",
+      "   Emergency Admissions Type 3 and 4  Total Emergency Admissions via A&E  \\\n",
+      "0                                4.0                              5988.0   \n",
+      "1                                0.0                              6646.0   \n",
+      "2                                0.0                             11635.0   \n",
+      "3                                0.0                              7648.0   \n",
+      "4                               41.0                             11347.0   \n",
       "\n",
-      "     Emergency Admissions Type 2  Emergency Admissions Type 3 and 4  \\\n",
-      "NaN                          NaN                                NaN   \n",
-      "NaN                          0.0                                8.0   \n",
-      "NaN                          0.0                                0.0   \n",
-      "NaN                          0.0                                0.0   \n",
-      "NaN                          9.0                                0.0   \n",
+      "   Other Emergency Admissions (not via A&E)  Total Emergency Admissions  \\\n",
+      "0                                    4030.0                     10018.0   \n",
+      "1                                    2946.0                      9592.0   \n",
+      "2                                    5823.0                     17458.0   \n",
+      "3                                    3668.0                     11316.0   \n",
+      "4                                    5864.0                     17211.0   \n",
       "\n",
-      "     Total Emergency Admissions via A&E  \\\n",
-      "NaN                                 NaN   \n",
-      "NaN                              6444.0   \n",
-      "NaN                              7142.0   \n",
-      "NaN                             11604.0   \n",
-      "NaN                              8275.0   \n",
+      "  Patients spending >4 hours from decision to admit  \\\n",
+      "0                                            1692.0   \n",
+      "1                                             706.0   \n",
+      "2                                            4579.0   \n",
+      "3                                            2362.0   \n",
+      "4                                            2365.0   \n",
       "\n",
-      "    Other Emergency Admissions (not via A&E)  Total Emergency Admissions  \\\n",
-      "NaN                                      NaN                         NaN   \n",
-      "NaN                                   4007.0                     10451.0   \n",
-      "NaN                                   2738.0                      9880.0   \n",
-      "NaN                                   6873.0                     18477.0   \n",
-      "NaN                                   3642.0                     11917.0   \n",
+      "   Patients spending >12 hours from decision to admit       Date  \\\n",
+      "0                                               96.0  2024-02-01   \n",
+      "1                                                6.0  2024-02-01   \n",
+      "2                                             1808.0  2024-02-01   \n",
+      "3                                              423.0  2024-02-01   \n",
+      "4                                              341.0  2024-02-01   \n",
       "\n",
-      "     Patients spending >4 hours from decision to admit  \\\n",
-      "NaN                                                NaN   \n",
-      "NaN                                             2193.0   \n",
-      "NaN                                             1079.0   \n",
-      "NaN                                             4879.0   \n",
-      "NaN                                             2937.0   \n",
+      "   Percentage_Under_4_Hours  \n",
+      "0                 71.042252  \n",
+      "1                 76.932579  \n",
+      "2                 70.260050  \n",
+      "3                 70.851224  \n",
+      "4                 70.027708  \n",
       "\n",
-      "     Patients spending >12 hours from decision to admit  \n",
-      "NaN                                                NaN   \n",
-      "NaN                                              445.0   \n",
-      "NaN                                               82.0   \n",
-      "NaN                                             1938.0   \n",
-      "NaN                                             1047.0   \n",
-      "\n",
-      "[5 rows x 26 columns]\n",
-      "\n",
-      "Cleaned Data Preview:\n",
-      "    Code                                        System  Type 1 Departments  \\\n",
-      "NaN  QOP  NHS Greater Manchester Integrated Care Board             87508.0   \n",
-      "\n",
-      "     Type 2 Departments  Type 3 Departments  Total Attendances  \\\n",
-      "NaN              3184.0             35077.0           125769.0   \n",
-      "\n",
-      "     Attendances < 4 hours (Type 1)  Attendances < 4 hours (Type 2)  \\\n",
-      "NaN                         44674.0                          3107.0   \n",
-      "\n",
-      "     Attendances < 4 hours (Type 3)  Total Attendances < 4 hours  ...  \\\n",
-      "NaN                         33238.0                      81019.0  ...   \n",
-      "\n",
-      "     Percentage in 4 hours (Type 3)  Emergency Admissions Type 1  \\\n",
-      "NaN                        0.947572                      21989.0   \n",
-      "\n",
-      "     Emergency Admissions Type 2  Emergency Admissions Type 3 and 4  \\\n",
-      "NaN                        148.0                              677.0   \n",
-      "\n",
-      "     Total Emergency Admissions via A&E  \\\n",
-      "NaN                             22814.0   \n",
-      "\n",
-      "     Other Emergency Admissions (not via A&E) Total Emergency Admissions  \\\n",
-      "NaN                                    5925.0                    28739.0   \n",
-      "\n",
-      "     Patients spending >4 hours from decision to admit  \\\n",
-      "NaN                                            12246.0   \n",
-      "\n",
-      "     Patients spending >12 hours from decision to admit  \\\n",
-      "NaN                                             4105.0    \n",
-      "\n",
-      "     Percentage_Under_4_Hours  \n",
-      "NaN                 64.418895  \n",
-      "\n",
-      "[1 rows x 27 columns]\n",
-      "\n",
-      "Final Columns:\n",
-      "Index(['Code', 'System', 'Type 1 Departments', 'Type 2 Departments',\n",
-      "       'Type 3 Departments', 'Total Attendances',\n",
-      "       'Attendances < 4 hours (Type 1)', 'Attendances < 4 hours (Type 2)',\n",
-      "       'Attendances < 4 hours (Type 3)', 'Total Attendances < 4 hours',\n",
-      "       'Attendances > 4 hours (Type 1)', 'Attendances > 4 hours (Type 2)',\n",
-      "       'Attendances > 4 hours (Type 3)', 'Total Attendances > 4 hours',\n",
-      "       'Percentage in 4 hours (all)', 'Percentage in 4 hours (Type 1)',\n",
-      "       'Percentage in 4 hours (Type 2)', 'Percentage in 4 hours (Type 3)',\n",
-      "       'Emergency Admissions Type 1', 'Emergency Admissions Type 2',\n",
-      "       'Emergency Admissions Type 3 and 4',\n",
-      "       'Total Emergency Admissions via A&E',\n",
-      "       'Other Emergency Admissions (not via A&E)',\n",
-      "       'Total Emergency Admissions',\n",
-      "       'Patients spending >4 hours from decision to admit',\n",
-      "       'Patients spending >12 hours from decision to admit',\n",
-      "       'Percentage_Under_4_Hours'],\n",
-      "      dtype='object')\n",
-      "\n",
-      "Total Rows After Cleaning: 42\n"
+      "[5 rows x 28 columns]\n",
+      "Combined data saved to '../data/combined_2024_ae_data.csv'.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from glob import glob\n",
+    "import os\n",
     "\n",
-    "# Load the Excel file and skip rows to get to the actual data\n",
-    "real_file_path = '../data/december_2024_ae_data.xls'\n",
+    "# Directory where my monthly data files are stored\n",
+    "data_dir = '../data/'\n",
     "\n",
-    "# Define the correct headers\n",
+    "# Find all Excel files for 2024 data\n",
+    "data_files = glob(os.path.join(data_dir, '*_2024_ae_data.xls'))\n",
+    "\n",
+    "# Define headers\n",
     "headers = [\n",
     "    'Code', 'System', 'Type 1 Departments', 'Type 2 Departments', 'Type 3 Departments',\n",
     "    'Total Attendances', 'Attendances < 4 hours (Type 1)', 'Attendances < 4 hours (Type 2)',\n",
@@ -837,41 +779,50 @@
     "    'Patients spending >4 hours from decision to admit', 'Patients spending >12 hours from decision to admit'\n",
     "]\n",
     "\n",
-    "# Skip rows and use the custom headers\n",
-    "real_data = pd.read_excel(real_file_path, engine='xlrd', skiprows=17, header=None, names=headers)\n",
+    "# Initialize an empty list to store DataFrames for each file\n",
+    "all_data_frames = []\n",
     "\n",
-    "# Preview the data\n",
-    "print(\"\\nNew Data Preview (with custom headers):\")\n",
-    "print(real_data.head())\n",
+    "# Read and clean each file\n",
+    "for file in data_files:\n",
+    "    # Read Excel file with headers and skip metadata rows\n",
+    "    data = pd.read_excel(file, engine='xlrd', skiprows=17, header=None, names=headers)\n",
     "\n",
-    "# Clean and filter the data\n",
-    "# Remove rows with invalid or placeholder values\n",
-    "real_data = real_data[real_data['System'].notna() & (real_data['System'] != '-')]\n",
+    "    # Remove invalid rows\n",
+    "    data = data[data['System'].notna() & (data['System'] != '-')]\n",
     "\n",
-    "# Convert relevant columns to numeric\n",
-    "numeric_columns = [\n",
-    "    'Total Attendances', 'Total Attendances < 4 hours', 'Total Attendances > 4 hours',\n",
-    "    'Emergency Admissions Type 1', 'Patients spending >4 hours from decision to admit'\n",
-    "]\n",
-    "real_data[numeric_columns] = real_data[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "    # Convert relevant columns to numeric\n",
+    "    numeric_columns = [\n",
+    "        'Total Attendances', 'Total Attendances < 4 hours', 'Total Attendances > 4 hours',\n",
+    "        'Emergency Admissions Type 1', 'Patients spending >4 hours from decision to admit'\n",
+    "    ]\n",
+    "    data[numeric_columns] = data[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
     "\n",
-    "# Drop rows with missing required data\n",
-    "real_data = real_data.dropna(subset=['Total Attendances', 'Total Attendances < 4 hours'])\n",
+    "    # Drop rows with missing required data\n",
+    "    data = data.dropna(subset=['Total Attendances', 'Total Attendances < 4 hours'])\n",
     "\n",
-    "# Add calculated fields (e.g., percentage of patients seen within 4 hours)\n",
-    "real_data['Percentage_Under_4_Hours'] = (real_data['Total Attendances < 4 hours'] / real_data['Total Attendances']) * 100\n",
+    "    # Add 'Date' column for tracking month\n",
+    "    month = os.path.basename(file).split('_')[0]\n",
+    "    data['Date'] = pd.to_datetime(f\"2024-{month}-01\", format='%Y-%B-%d')\n",
     "\n",
-    "# Filter for a specific hospital system (example)\n",
-    "hospital_data = real_data[real_data['System'] == 'NHS Greater Manchester Integrated Care Board']\n",
+    "    # Add calculated fields (e.g., percentage of patients seen within 4 hours)\n",
+    "    data['Percentage_Under_4_Hours'] = (data['Total Attendances < 4 hours'] / data['Total Attendances']) * 100\n",
     "\n",
-    "# Preview the cleaned data\n",
-    "print(\"\\nCleaned Data Preview:\")\n",
-    "print(hospital_data.head())\n",
+    "    # Append cleaned data to the list\n",
+    "    all_data_frames.append(data)\n",
     "\n",
-    "# Check final column names and row count\n",
-    "print(\"\\nFinal Columns:\")\n",
-    "print(real_data.columns)\n",
-    "print(f\"\\nTotal Rows After Cleaning: {len(real_data)}\")\n"
+    "# Combine all monthly data into a single DataFrame\n",
+    "combined_data = pd.concat(all_data_frames, ignore_index=True)\n",
+    "\n",
+    "# Final cleaning (if needed)\n",
+    "combined_data = combined_data.dropna(subset=['System', 'Total Attendances'])\n",
+    "\n",
+    "# Preview the combined data\n",
+    "print(\"\\nCombined Data Preview:\")\n",
+    "print(combined_data.head())\n",
+    "\n",
+    "# Save combined data to CSV\n",
+    "combined_data.to_csv('../data/combined_2024_ae_data.csv', index=False)\n",
+    "print(\"Combined data saved to '../data/combined_2024_ae_data.csv'.\")\n"
    ]
   },
   {
