updated overall statistics for the whole year of 2024 of the data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -827,79 +827,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Total Attendances in December 2024: 2345934.0\n",
-      "Average Percentage Seen Within 4 Hours: 70.04%\n"
+     "ename": "NameError",
+     "evalue": "name 'new_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate overall statistics for the full year of data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m total_attendances \u001b[38;5;241m=\u001b[39m \u001b[43mnew_data\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal Attendances\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      3\u001b[0m average_percentage_under_4_hours \u001b[38;5;241m=\u001b[39m new_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPercentage_Under_4_Hours\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTotal Attendances in 2024: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_attendances\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_data' is not defined"
      ]
     }
    ],
    "source": [
-    "# Calculate overall statistics\n",
+    "# Calculate overall statistics for the full year of data\n",
     "total_attendances = real_data['Total Attendances'].sum()\n",
     "average_percentage_under_4_hours = real_data['Percentage_Under_4_Hours'].mean()\n",
     "\n",
-    "print(f\"\\nTotal Attendances in December 2024: {total_attendances}\")\n",
-    "print(f\"Average Percentage Seen Within 4 Hours: {average_percentage_under_4_hours:.2f}%\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Top 5 Hospital Systems by 4-hour Performance:\n",
-      "                                                System  \\\n",
-      "NaN          NHS Kent And Medway Integrated Care Board   \n",
-      "NaN  NHS Cornwall And The Isles Of Scilly Integrate...   \n",
-      "NaN            NHS Black Country Integrated Care Board   \n",
-      "NaN        NHS North West London Integrated Care Board   \n",
-      "NaN          NHS Gloucestershire Integrated Care Board   \n",
-      "\n",
-      "     Percentage_Under_4_Hours  \n",
-      "NaN                 78.922410  \n",
-      "NaN                 77.149056  \n",
-      "NaN                 76.532080  \n",
-      "NaN                 75.801297  \n",
-      "NaN                 75.288589  \n",
-      "\n",
-      "Bottom 5 Hospital Systems by 4-hour Performance:\n",
-      "                                                System  \\\n",
-      "NaN  NHS Cambridgeshire And Peterborough Integrated...   \n",
-      "NaN  NHS Staffordshire And Stoke-On-Trent Integrate...   \n",
-      "NaN  NHS Shropshire, Telford And Wrekin Integrated ...   \n",
-      "NaN  NHS Nottingham And Nottinghamshire Integrated ...   \n",
-      "NaN  NHS Herefordshire And Worcestershire Integrate...   \n",
-      "\n",
-      "     Percentage_Under_4_Hours  \n",
-      "NaN                 64.278458  \n",
-      "NaN                 62.684941  \n",
-      "NaN                 58.650000  \n",
-      "NaN                 58.488398  \n",
-      "NaN                 55.970497  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# Sort by percentage under 4 hours\n",
+    "print(f\"\\nTotal Attendances in 2024: {total_attendances}\")\n",
+    "print(f\"Average Percentage Seen Within 4 Hours in 2024: {average_percentage_under_4_hours:.2f}%\")\n",
+    "\n",
+    "# Sort by percentage under 4 hours for the whole year\n",
     "sorted_data = real_data.sort_values('Percentage_Under_4_Hours', ascending=False)\n",
     "\n",
-    "print(\"\\nTop 5 Hospital Systems by 4-hour Performance:\")\n",
+    "print(\"\\nTop 5 Hospital Systems by 4-hour Performance (2024):\")\n",
     "print(sorted_data[['System', 'Percentage_Under_4_Hours']].head(5))\n",
     "\n",
-    "print(\"\\nBottom 5 Hospital Systems by 4-hour Performance:\")\n",
-    "print(sorted_data[['System', 'Percentage_Under_4_Hours']].tail(5))\n"
+    "print(\"\\nBottom 5 Hospital Systems by 4-hour Performance (2024):\")\n",
+    "print(sorted_data[['System', 'Percentage_Under_4_Hours']].tail(5))\n",
+    "\n"
    ]
   },
   {
