made  new notebook with real data, going to work from here with the appropriate synethic data

--- a/src/wait_times.ipynb
+++ b/src/wait_times.ipynb
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
     "import os\n",
     "\n",
     "# Directory where your data files are stored\n",
-    "data_dir = '../data/'  # Change this to your actual folder path\n",
+    "data_dir = '../data/'\n",
     "\n",
     "# Find all Excel files for 2024 data\n",
     "data_files = glob(os.path.join(data_dir, '*_2024_ae_data.xls'))\n",
