--- a/src/synthetic_data_v2.ipynb
+++ b/src/synthetic_data_v2.ipynb
@@ -162,6 +162,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Real Data Updated with New Features:\n",
+      "   Month  is_full_moon  season day_or_night\n",
+      "0      2             0  Winter          Day\n",
+      "1      2             0  Winter          Day\n",
+      "2      2             0  Winter          Day\n",
+      "3      2             0  Winter          Day\n",
+      "4      2             0  Winter          Day\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Convert 'Month' column to a proper Date\n",
+    "combined_data['Date'] = pd.to_datetime(combined_data['Month'].astype(str) + '-01-2024')\n",
+    "\n",
+    "# Define Full Moon Dates for 2024\n",
+    "full_moon_dates = [\n",
+    "    \"2024-01-25\", \"2024-02-24\", \"2024-03-25\", \"2024-04-23\", \"2024-05-23\", \n",
+    "    \"2024-06-21\", \"2024-07-21\", \"2024-08-19\", \"2024-09-17\", \"2024-10-17\", \n",
+    "    \"2024-11-15\", \"2024-12-15\"\n",
+    "]\n",
+    "full_moon_dates = [datetime.strptime(date, \"%Y-%m-%d\") for date in full_moon_dates]\n",
+    "\n",
+    "# Function to check if a date is a full moon\n",
+    "def is_full_moon(date):\n",
+    "    return 1 if date.date() in [fm.date() for fm in full_moon_dates] else 0\n",
+    "\n",
+    "# Apply the full moon feature\n",
+    "combined_data['is_full_moon'] = combined_data['Date'].map(is_full_moon)\n",
+    "\n",
+    "# Define function for seasons\n",
+    "def get_season(month):\n",
+    "    if month in [12, 1, 2]:\n",
+    "        return 'Winter'\n",
+    "    elif month in [3, 4, 5]:\n",
+    "        return 'Spring'\n",
+    "    elif month in [6, 7, 8]:\n",
+    "        return 'Summer'\n",
+    "    else:\n",
+    "        return 'Autumn'\n",
+    "\n",
+    "# Apply season mapping\n",
+    "combined_data['season'] = combined_data['Month'].map(get_season)\n",
+    "\n",
+    "# Define function for day/night (assumption: even months = Day, odd months = Night)\n",
+    "def day_or_night(month):\n",
+    "    return 'Day' if month % 2 == 0 else 'Night'\n",
+    "\n",
+    "# Apply day/night feature\n",
+    "combined_data['day_or_night'] = combined_data['Month'].map(day_or_night)\n",
+    "\n",
+    "# Save updated dataset\n",
+    "combined_data.to_csv('../data/combined_2024_ae_data_with_features.csv', index=False)\n",
+    "\n",
+    "print(\"\\n✅ Real Data Updated with New Features:\")\n",
+    "print(combined_data[['Month', 'is_full_moon', 'season', 'day_or_night']].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
