analyzing data for full moon vs non full moon

--- a/src/synthetic_data_v2.ipynb
+++ b/src/synthetic_data_v2.ipynb
@@ -497,22 +497,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Real Data - Unique Full Moon Categories: [0]\n",
-      "Synthetic Data - Unique Full Moon Categories: [0 1]\n"
+      "Synthetic Full Moon Data Breakdown:\n",
+      "               Under_4_Hours\n",
+      "is_full_moon               \n",
+      "0                      6401\n",
+      "1                       217\n"
      ]
     }
    ],
    "source": [
-    "# Check unique values in is_full_moon column\n",
-    "print(\"Real Data - Unique Full Moon Categories:\", combined_data['is_full_moon'].unique())\n",
-    "print(\"Synthetic Data - Unique Full Moon Categories:\", synthetic_df['is_full_moon'].unique())\n"
+    "print(\"Synthetic Full Moon Data Breakdown:\\n\", synthetic_df.groupby('is_full_moon')[['Under_4_Hours']].sum())\n"
    ]
   }
  ],
