--- a/src/data_validation.ipynb
+++ b/src/data_validation.ipynb
@@ -14,288 +14,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>period</th>\n",
-       "      <th>org_code</th>\n",
-       "      <th>parent_org</th>\n",
-       "      <th>org_name</th>\n",
-       "      <th>a&amp;e_attendances_type_1</th>\n",
-       "      <th>a&amp;e_attendances_type_2</th>\n",
-       "      <th>a&amp;e_attendances_other_a&amp;e_department</th>\n",
-       "      <th>a&amp;e_attendances_booked_appointments_type_1</th>\n",
-       "      <th>a&amp;e_attendances_booked_appointments_type_2</th>\n",
-       "      <th>a&amp;e_attendances_booked_appointments_other_department</th>\n",
-       "      <th>...</th>\n",
-       "      <th>attendances_over_4hrs_booked_appointments_other_department</th>\n",
-       "      <th>patients_who_have_waited_4-12_hs_from_dta_to_admission</th>\n",
-       "      <th>patients_who_have_waited_12+_hrs_from_dta_to_admission</th>\n",
-       "      <th>emergency_admissions_via_a&amp;e_-_type_1</th>\n",
-       "      <th>emergency_admissions_via_a&amp;e_-_type_2</th>\n",
-       "      <th>emergency_admissions_via_a&amp;e_-_other_a&amp;e_department</th>\n",
-       "      <th>other_emergency_admissions</th>\n",
-       "      <th>month</th>\n",
-       "      <th>year</th>\n",
-       "      <th>percentage_seen_within_4_hours</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MSitAE-APRIL-2024</td>\n",
-       "      <td>AAH</td>\n",
-       "      <td>NHS ENGLAND SOUTH WEST</td>\n",
-       "      <td>TETBURY HOSPITAL TRUST LTD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>546.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MSitAE-APRIL-2024</td>\n",
-       "      <td>RAN</td>\n",
-       "      <td>NHS ENGLAND LONDON</td>\n",
-       "      <td>ROYAL NATIONAL ORTHOPAEDIC HOSPITAL NHS TRUST</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MSitAE-APRIL-2024</td>\n",
-       "      <td>8J094</td>\n",
-       "      <td>NHS ENGLAND MIDLANDS</td>\n",
-       "      <td>BADGER LTD</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2078.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MSitAE-APRIL-2024</td>\n",
-       "      <td>AD913</td>\n",
-       "      <td>NHS ENGLAND LONDON</td>\n",
-       "      <td>BECKENHAM BEACON UCC</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3694.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MSitAE-APRIL-2024</td>\n",
-       "      <td>AQN04</td>\n",
-       "      <td>NHS ENGLAND SOUTH EAST</td>\n",
-       "      <td>PHL LYMINGTON UTC</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2897.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>April</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              period org_code               parent_org  \\\n",
-       "0  MSitAE-APRIL-2024      AAH  NHS ENGLAND SOUTH WEST    \n",
-       "1  MSitAE-APRIL-2024      RAN       NHS ENGLAND LONDON   \n",
-       "2  MSitAE-APRIL-2024    8J094    NHS ENGLAND MIDLANDS    \n",
-       "3  MSitAE-APRIL-2024    AD913       NHS ENGLAND LONDON   \n",
-       "4  MSitAE-APRIL-2024    AQN04  NHS ENGLAND SOUTH EAST    \n",
-       "\n",
-       "                                        org_name  a&e_attendances_type_1  \\\n",
-       "0                     TETBURY HOSPITAL TRUST LTD                     0.0   \n",
-       "1  ROYAL NATIONAL ORTHOPAEDIC HOSPITAL NHS TRUST                     0.0   \n",
-       "2                                     BADGER LTD                     0.0   \n",
-       "3                           BECKENHAM BEACON UCC                     0.0   \n",
-       "4                              PHL LYMINGTON UTC                     0.0   \n",
-       "\n",
-       "   a&e_attendances_type_2  a&e_attendances_other_a&e_department  \\\n",
-       "0                     0.0                                 546.0   \n",
-       "1                     0.0                                   0.0   \n",
-       "2                     0.0                                   0.0   \n",
-       "3                     0.0                                3694.0   \n",
-       "4                     0.0                                2897.0   \n",
-       "\n",
-       "   a&e_attendances_booked_appointments_type_1  \\\n",
-       "0                                         0.0   \n",
-       "1                                         0.0   \n",
-       "2                                         0.0   \n",
-       "3                                         0.0   \n",
-       "4                                         0.0   \n",
-       "\n",
-       "   a&e_attendances_booked_appointments_type_2  \\\n",
-       "0                                         0.0   \n",
-       "1                                         0.0   \n",
-       "2                                         0.0   \n",
-       "3                                         0.0   \n",
-       "4                                         0.0   \n",
-       "\n",
-       "   a&e_attendances_booked_appointments_other_department  ...  \\\n",
-       "0                                                0.0     ...   \n",
-       "1                                                0.0     ...   \n",
-       "2                                             2078.0     ...   \n",
-       "3                                              104.0     ...   \n",
-       "4                                                7.0     ...   \n",
-       "\n",
-       "   attendances_over_4hrs_booked_appointments_other_department  \\\n",
-       "0                                                0.0            \n",
-       "1                                                0.0            \n",
-       "2                                                0.0            \n",
-       "3                                                0.0            \n",
-       "4                                                0.0            \n",
-       "\n",
-       "   patients_who_have_waited_4-12_hs_from_dta_to_admission  \\\n",
-       "0                                                0.0        \n",
-       "1                                                0.0        \n",
-       "2                                                0.0        \n",
-       "3                                                0.0        \n",
-       "4                                                0.0        \n",
-       "\n",
-       "   patients_who_have_waited_12+_hrs_from_dta_to_admission  \\\n",
-       "0                                                0.0        \n",
-       "1                                                0.0        \n",
-       "2                                                0.0        \n",
-       "3                                                0.0        \n",
-       "4                                                0.0        \n",
-       "\n",
-       "   emergency_admissions_via_a&e_-_type_1  \\\n",
-       "0                                    0.0   \n",
-       "1                                    0.0   \n",
-       "2                                    0.0   \n",
-       "3                                    0.0   \n",
-       "4                                    0.0   \n",
-       "\n",
-       "   emergency_admissions_via_a&e_-_type_2  \\\n",
-       "0                                    0.0   \n",
-       "1                                    0.0   \n",
-       "2                                    0.0   \n",
-       "3                                    0.0   \n",
-       "4                                    0.0   \n",
-       "\n",
-       "   emergency_admissions_via_a&e_-_other_a&e_department  \\\n",
-       "0                                                0.0     \n",
-       "1                                                0.0     \n",
-       "2                                                0.0     \n",
-       "3                                                0.0     \n",
-       "4                                                0.0     \n",
-       "\n",
-       "   other_emergency_admissions  month  year  percentage_seen_within_4_hours  \n",
-       "0                         0.0  April  2024                             NaN  \n",
-       "1                        41.0  April  2024                             NaN  \n",
-       "2                         0.0  April  2024                             NaN  \n",
-       "3                         0.0  April  2024                             NaN  \n",
-       "4                         0.0  April  2024                             NaN  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique years in dataset: [2024 2023 2022 2021 2020 2019 2018]\n",
+      "\n",
+      "Records per year:\n",
+      "year\n",
+      "2018    3686\n",
+      "2019    2812\n",
+      "2020    2663\n",
+      "2021    2583\n",
+      "2022    2466\n",
+      "2023    2450\n",
+      "2024    2383\n",
+      "Name: count, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the dataset\n",
-    "file_path = \"nhs_ae_merged_with_synthetic_data.csv\"\n",
+    "file_path = \"nhs_ae_merged.csv\"\n",
     "nhs_data = pd.read_csv(file_path)\n",
     "\n",
-    "# Display the first few rows\n",
-    "nhs_data.head()\n"
+    "# Check unique years\n",
+    "print(\"Unique years in dataset:\", nhs_data[\"year\"].unique())\n",
+    "\n",
+    "# Count records per year\n",
+    "print(\"\\nRecords per year:\")\n",
+    "print(nhs_data[\"year\"].value_counts())\n"
    ]
   },
   {
@@ -311,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,29 +73,32 @@
      "text": [
       "Records per year:\n",
       "year\n",
-      "2021    2906\n",
+      "2018    3686\n",
+      "2019    2812\n",
+      "2020    2663\n",
+      "2021    2583\n",
       "2022    2466\n",
       "2023    2450\n",
       "2024    2383\n",
-      "2018     214\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Records per month:\n",
       "month\n",
-      "July         931\n",
-      "January      901\n",
-      "February     898\n",
-      "March        894\n",
-      "May          822\n",
-      "June         821\n",
-      "April        819\n",
-      "August       815\n",
-      "December     815\n",
-      "November     815\n",
-      "October      815\n",
-      "September    814\n",
-      "0            259\n",
-      "Name: count, dtype: int64\n"
+      "0            1756\n",
+      "April        1526\n",
+      "May          1525\n",
+      "June         1521\n",
+      "August       1509\n",
+      "September    1507\n",
+      "October      1505\n",
+      "November     1503\n",
+      "December     1501\n",
+      "July         1305\n",
+      "January      1299\n",
+      "February     1296\n",
+      "March        1290\n",
+      "Name: count, dtype: int64\n",
+      "Unique years in dataset: [2024 2023 2022 2021 2020 2019 2018]\n"
      ]
     }
    ],
@@ -353,7 +109,9 @@
     "\n",
     "# Count records per month\n",
     "print(\"\\nRecords per month:\")\n",
-    "print(nhs_data[\"month\"].value_counts())\n"
+    "print(nhs_data[\"month\"].value_counts())\n",
+    "print(\"Unique years in dataset:\", nhs_data[\"year\"].unique())\n",
+    "\n"
    ]
   },
   {
