--- a/src/data_validation.ipynb
+++ b/src/data_validation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       "\n",
       "🔍 Detected 305 outlier records.\n",
       "\n",
-      "✅ Outlier handling complete. Clean dataset saved as nhs_ae_merged_no_outliers.csv\n"
+      "✅ Outlier handling complete. Clean dataset saved as nhs_ae_merged.csv\n"
      ]
     },
     {
@@ -340,7 +340,7 @@
     "nhs_data = nhs_data[nhs_data[\"a&e_attendances_type_1\"] <= 500000]\n",
     "\n",
     "# ✅ **5. Save Cleaned Dataset**\n",
-    "output_file = \"nhs_ae_merged_no_outliers.csv\"\n",
+    "output_file = \"nhs_ae_merged.csv\"\n",
     "nhs_data.to_csv(output_file, index=False)\n",
     "print(f\"\\n✅ Outlier handling complete. Clean dataset saved as {output_file}\")\n",
     "\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
